Fixing all the open issues and refactoring the code.